--- a/app/src/main/res/menu/menu_list_view.xml
+++ b/app/src/main/res/menu/menu_list_view.xml
@@ -7,6 +7,6 @@
         android:id="@+id/search"
         android:title="@string/action_search"
         android:icon="@drawable/ic_search_white_24dp"
-        app:actionViewClass="android.support.v7.widget.SearchView"
+        app:actionViewClass="androidx.appcompat.widget.SearchView"
         app:showAsAction="collapseActionView|always" />
 </menu>
