--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -5,7 +5,7 @@
     <color name="primary">#0082C9</color>
     <color name="primary_dark">#286090</color>
 
-    <color name="separator">#d2d2d2</color>
+    <color name="separator">#fbfbfb</color>
 
     <color name="bg_transparent">#aa000000</color>
     <color name="bg_highlighted">#f3f3f3</color>
