#378 Enhance category handling
Removed AlwaysAutoCompleteView in favor of a recylcerview

--- a/app/src/main/res/layout/dialog_change_category.xml
+++ b/app/src/main/res/layout/dialog_change_category.xml
@@ -1,15 +1,18 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+	android:id="@+id/editCategoryLayout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
     android:padding="?dialogPreferredPadding">
 
-    <it.niedermann.owncloud.notes.android.AlwaysAutoCompleteTextView
-        android:id="@+id/editCategory"
+    <EditText
+        android:id="@+id/search"
+		android:layout_width="match_parent"
+		android:layout_height="wrap_content" />
+
+	<androidx.recyclerview.widget.RecyclerView
+		android:id="@+id/recycler_view"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:completionThreshold="1"
-        android:inputType="text"
-        android:textColor="@color/fg_default" />
+        android:layout_height="wrap_content" android:scrollbars="vertical" />
 </LinearLayout>
