--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -12,6 +12,12 @@
     <dimen name="primary_font_size">16sp</dimen>
     <dimen name="secondary_font_size">14sp</dimen>
 
+    <!-- Font Sizes -->
+    <dimen name="note_font_size_tiny">14sp</dimen>
+    <dimen name="note_font_size_small">16sp</dimen>
+    <dimen name="note_font_size_medium">18sp</dimen>
+    <dimen name="note_font_size_large">22sp</dimen>
+
     <!-- Widgets -->
     <dimen name="widget_margin">8dp</dimen>
     <dimen name="widget_single_note_padding">10dp</dimen>
