--- a/app/src/main/res/xml/preferences.xml
+++ b/app/src/main/res/xml/preferences.xml
@@ -30,6 +30,15 @@
         android:key="@string/pref_key_font"
         android:title="@string/settings_font_title" />
 
+    <ListPreference
+        android:defaultValue="@string/pref_value_font_size_medium"
+        android:entries="@array/fontSize_entries"
+        android:entryValues="@array/fontSize_values"
+        android:icon="@drawable/ic_format_size_black_24dp"
+        android:key="@string/pref_key_font_size"
+        android:summary="%s"
+        android:title="@string/settings_font_size" />
+
     <SwitchPreference
         android:defaultValue="@string/pref_value_wifi_and_mobile"
         android:icon="@drawable/ic_sync_black_24dp"
