--- a/app/src/main/res/layout/item_navigation.xml
+++ b/app/src/main/res/layout/item_navigation.xml
@@ -1,19 +1,21 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:paddingLeft="6dp"
     android:paddingStart="6dp"
     android:paddingRight="8dp"
     android:paddingEnd="8dp">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/navigationItemIcon"
         android:layout_width="44dp"
         android:layout_height="44dp"
         android:padding="10dp"
         android:scaleType="center"
         android:focusable="false"
-        android:src="@drawable/ic_folder_grey600_24dp" />
+        app:srcCompat="@drawable/ic_folder_grey600_24dp"
+        android:contentDescription="@null" />
 
     <TextView
         android:id="@+id/navigationItemCount"
