--- a/app/src/main/res/layout/item_account.xml
+++ b/app/src/main/res/layout/item_account.xml
@@ -2,19 +2,21 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
+    android:background="?attr/selectableItemBackground"
     android:paddingLeft="6dp"
     android:paddingStart="6dp"
     android:paddingRight="8dp"
     android:paddingEnd="8dp">
 
-    <ImageView
+    <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/accountItemAvatar"
         android:layout_width="44dp"
         android:layout_height="44dp"
         android:padding="10dp"
         android:scaleType="center"
         android:focusable="false"
-        android:src="@drawable/ic_account_circle_grey_24dp"
+        app:srcCompat="@drawable/ic_account_circle_grey_24dp"
         android:contentDescription="@null" />
 
     <TextView
