--- a/app/src/main/res/layout/item_account.xml
+++ b/app/src/main/res/layout/item_account.xml
@@ -26,8 +26,10 @@
         android:layout_centerVertical="true"
         android:layout_marginLeft="64dp"
         android:layout_marginStart="64dp"
-        android:ellipsize="end"
-        android:lines="1"
+        android:layout_marginRight="16dp"
+        android:layout_marginEnd="16dp"
+        android:ellipsize="middle"
+        android:singleLine="true"
         android:textAppearance="@style/NavigationItem"
         tools:hint="Username"/>
 
