--- a/app/src/main/res/layout/item_account.xml
+++ b/app/src/main/res/layout/item_account.xml
@@ -22,15 +22,27 @@
     <TextView
         android:id="@+id/accountItemLabel"
         android:layout_height="wrap_content"
-        android:layout_width="match_parent"
+        android:layout_width="wrap_content"
         android:layout_centerVertical="true"
         android:layout_marginLeft="64dp"
         android:layout_marginStart="64dp"
-        android:layout_marginRight="16dp"
-        android:layout_marginEnd="16dp"
+        android:layout_marginRight="64dp"
+        android:layout_marginEnd="64dp"
         android:ellipsize="middle"
         android:singleLine="true"
         android:textAppearance="@style/NavigationItem"
         tools:hint="Username"/>
+
+    <androidx.appcompat.widget.AppCompatImageView
+        android:id="@+id/delete"
+        android:layout_width="44dp"
+        android:layout_height="44dp"
+        android:padding="10dp"
+        android:scaleType="center"
+        android:focusable="false"
+        android:layout_alignParentEnd="true"
+        android:layout_alignParentRight="true"
+        app:srcCompat="@drawable/ic_delete_grey600_24dp"
+        android:contentDescription="@string/menu_delete" />
 
 </RelativeLayout>
