--- a/app/src/main/res/layout/item_account.xml
+++ b/app/src/main/res/layout/item_account.xml
@@ -30,6 +30,7 @@
         android:layout_marginEnd="64dp"
         android:ellipsize="middle"
         android:singleLine="true"
+        android:textColor="@color/fg_default"
         android:textAppearance="@style/NavigationItem"
         tools:hint="Username"/>
 
