--- a/app/src/main/res/layout/fragment_notes_list_note_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_note_item.xml
@@ -1,6 +1,7 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/noteSwipeFrame"
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
@@ -37,13 +38,13 @@
             android:layout_width="wrap_content"
             android:layout_height="match_parent">
 
-
             <ImageView
                 android:id="@+id/noteFavorite"
                 android:contentDescription="@string/menu_favorite"
                 android:padding="16dp"
                 android:layout_width="wrap_content"
-                android:layout_height="match_parent" />
+                android:layout_height="match_parent"
+                tools:src="@drawable/ic_star_yellow_24dp"/>
 
 
             <androidx.appcompat.widget.AppCompatImageView
@@ -81,7 +82,8 @@
                     android:singleLine="true"
                     android:layout_weight="1"
                     android:textColor="@drawable/list_item_color_selector"
-                    android:textSize="@dimen/primary_font_size" />
+                    android:textSize="@dimen/primary_font_size"
+                    tools:text="The title of the note"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
 
 
@@ -103,7 +105,8 @@
                     android:paddingTop="1dp"
                     android:layout_weight="1"
                     android:textColor="@drawable/list_item_color_selector_low"
-                    android:textSize="@dimen/secondary_font_size" />
+                    android:textSize="@dimen/secondary_font_size"
+                    tools:text="This is the content of the first line."/>
 
                 <TextView
                     android:id="@+id/noteCategory"
@@ -121,7 +124,8 @@
                     android:layout_marginLeft="8dp"
                     android:singleLine="true"
                     android:textColor="@drawable/list_item_color_selector"
-                    android:textSize="@dimen/secondary_font_size" />
+                    android:textSize="@dimen/secondary_font_size"
+                    tools:text="My fancy category"/>
             </androidx.appcompat.widget.LinearLayoutCompat>
         </androidx.appcompat.widget.LinearLayoutCompat>
     </androidx.appcompat.widget.LinearLayoutCompat>
