--- a/app/src/main/res/layout/widget_note_list.xml
+++ b/app/src/main/res/layout/widget_note_list.xml
@@ -3,6 +3,7 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     xmlns:app="http://schemas.android.com/apk/res-auto"
+    xmlns:tools="http://schemas.android.com/tools"
     android:orientation="vertical"
     android:background="@color/widget_background">
 
@@ -36,11 +37,14 @@
             android:textSize="18sp"
             android:layout_toRightOf="@id/widget_note_header_icon"
             android:layout_toEndOf="@id/widget_note_header_icon"
+            android:layout_toLeftOf="@id/widget_note_list_create_icon"
+            android:layout_toStartOf="@id/widget_note_list_create_icon"
             android:gravity="center_vertical"
             android:paddingStart="@dimen/widget_note_list_outer_padding"
             android:paddingEnd="@dimen/widget_note_list_inner_padding"
             android:paddingLeft="@dimen/widget_note_list_outer_padding"
-            android:paddingRight="@dimen/widget_note_list_inner_padding" />
+            android:paddingRight="@dimen/widget_note_list_inner_padding"
+            tools:text="@string/app_name"/>
 
         <ImageView
             android:id="@+id/widget_note_list_create_icon"
@@ -63,7 +67,8 @@
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:textAppearance="?android:attr/textAppearanceMedium"
-        android:textColor="@color/fg_default" />
+        android:textColor="@color/fg_default"
+        tools:listitem="@layout/widget_entry"/>
 
     <TextView
         android:id="@+id/widget_note_list_placeholder_tv"
@@ -71,6 +76,7 @@
         android:layout_height="match_parent"
         android:gravity="center"
         android:text="@string/widget_note_list_placeholder"
-        android:textColor="@color/fg_default_high" />
+        android:textColor="@color/fg_default_high"
+        tools:visibility="gone"/>
 
 </LinearLayout>
