--- a/app/src/main/res/layout/activity_notes_list_view.xml
+++ b/app/src/main/res/layout/activity_notes_list_view.xml
@@ -39,11 +39,14 @@
                     <ImageView
                         android:layout_width="wrap_content"
                         android:layout_height="wrap_content"
+                        android:scaleX="1.5"
+                        android:scaleY="1.5"
                         android:layout_above="@id/empty_content_view_title"
                         android:layout_centerHorizontal="true"
-                        android:layout_marginBottom="20dp"
+                        android:layout_marginBottom="10dp"
                         android:contentDescription="@null"
-                        android:src="@mipmap/ic_launcher" />
+                        android:src="@drawable/ic_launcher_foreground"
+                        android:tint="@color/fg_default_high" />
 
                     <TextView
                         android:id="@+id/empty_content_view_title"
