--- a/app/src/main/res/layout/fragment_notes_list_note_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_note_item.xml
@@ -17,11 +17,11 @@
         android:contentDescription="@string/menu_favorite"
         app:srcCompat="@drawable/ic_star_white_24dp" />
 
-    <androidx.appcompat.widget.AppCompatImageView
+    <ImageView
         android:id="@+id/noteDeleteRight"
         android:layout_width="32dp"
         android:layout_height="32dp"
-        android:layout_gravity="right|end|center_vertical"
+        android:layout_gravity="end|center_vertical"
         android:layout_marginEnd="@dimen/button_padding"
         android:layout_marginRight="@dimen/button_padding"
         android:contentDescription="@string/menu_delete"
@@ -46,7 +46,6 @@
                 android:layout_height="match_parent"
                 tools:src="@drawable/ic_star_yellow_24dp"/>
 
-
             <androidx.appcompat.widget.AppCompatImageView
                 android:id="@+id/noteStatus"
                 android:layout_width="wrap_content"
@@ -66,14 +65,15 @@
             android:layout_height="wrap_content"
             android:paddingTop="16dp"
             android:paddingRight="16dp"
+            android:paddingEnd="16dp"
+            android:paddingLeft="0dp"
+            android:paddingStart="0dp"
             android:paddingBottom="16dp"
-            android:orientation="vertical"
-            android:background="@drawable/list_item_background_selector">
+            android:orientation="vertical">
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/list_item_background_selector">
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/noteTitle"
@@ -89,9 +89,7 @@
 
             <androidx.appcompat.widget.LinearLayoutCompat
                 android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:background="@drawable/list_item_background_selector">
-
+                android:layout_height="wrap_content">
 
                 <TextView
                     android:id="@+id/noteExcerpt"
@@ -133,6 +131,7 @@
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="1px"
+        android:contentDescription="@null"
         android:src="@color/separator" />
 
 </FrameLayout>
