--- a/app/src/main/res/layout/activity_exception.xml
+++ b/app/src/main/res/layout/activity_exception.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -27,9 +28,9 @@
         android:layout_height="0dp"
         android:layout_marginBottom="@dimen/activity_margin"
         android:layout_weight="1"
-        android:fontFamily="monospace"
         android:scrollbars="horizontal|vertical"
-        android:textIsSelectable="true" />
+        android:textIsSelectable="true"
+        app:fontFamily="monospace" />
 
     <LinearLayout
         android:layout_width="match_parent"
