--- a/app/src/main/res/layout/item_account_choose.xml
+++ b/app/src/main/res/layout/item_account_choose.xml
@@ -5,14 +5,13 @@
     android:layout_width="match_parent"
     android:layout_height="wrap_content"
     android:background="?attr/selectableItemBackground"
-    android:padding="16dp"
+    android:padding="24dp"
     android:orientation="horizontal">
 
     <androidx.appcompat.widget.AppCompatImageView
         android:id="@+id/accountItemAvatar"
-        android:layout_width="44dp"
-        android:layout_height="44dp"
-        android:padding="10dp"
+        android:layout_width="32dp"
+        android:layout_height="32dp"
         android:scaleType="center"
         android:focusable="false"
         app:srcCompat="@drawable/ic_account_circle_grey_24dp"
@@ -25,6 +24,8 @@
         android:layout_gravity="center"
         android:ellipsize="middle"
         android:singleLine="true"
+        android:layout_marginLeft="16dp"
+        android:layout_marginStart="16dp"
         android:textColor="@color/fg_default"
         android:textAppearance="@style/NavigationItem"
         tools:hint="Username"/>
