--- a/app/src/main/res/menu/menu_list_context_multiple.xml
+++ b/app/src/main/res/menu/menu_list_context_multiple.xml
@@ -9,4 +9,11 @@
         android:title="@string/menu_delete"
         app:showAsAction="ifRoom" />
 
+    <item
+        android:id="@+id/menu_move"
+        android:icon="@drawable/ic_send_white_24dp"
+        android:orderInCategory="110"
+        android:title="@string/simple_move"
+        app:showAsAction="ifRoom" />
+
 </menu>
