--- a/app/src/main/res/layout/fragment_notes_list_section_item.xml
+++ b/app/src/main/res/layout/fragment_notes_list_section_item.xml
@@ -23,5 +23,6 @@
         android:paddingEnd="16dp"
         android:paddingTop="48dp"
         android:textColor="@color/fg_default_selection"
-        android:textSize="@dimen/secondary_font_size" />
+        android:textSize="@dimen/secondary_font_size"
+        android:hint="@string/listview_updated_yesterday"/>
 </RelativeLayout>
