--- a/app/src/main/res/layout/activity_single_note.xml
+++ b/app/src/main/res/layout/activity_single_note.xml
@@ -16,7 +16,7 @@
         android:orientation="vertical"
         tools:context="it.niedermann.owncloud.notes.android.activity.EditNoteActivity">
 
-        <com.yydcdut.rxmarkdown.RxMDTextView
+        <com.yydcdut.markdown.MarkdownTextView
             android:id="@+id/single_note_content"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
