--- a/app/src/main/res/layout/activity_edit.xml
+++ b/app/src/main/res/layout/activity_edit.xml
@@ -7,7 +7,7 @@
     android:orientation="vertical"
     tools:context="it.niedermann.owncloud.notes.android.activity.EditNoteActivity">
 
-    <com.yydcdut.rxmarkdown.RxMDEditText
+    <com.yydcdut.markdown.MarkdownEditText
         android:id="@+id/editContent"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
