--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -1,21 +1,42 @@
 <?xml version="1.0" encoding="utf-8"?>
-<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/scrollView"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:fillViewport="true"
-    android:orientation="vertical"
-    tools:context="it.niedermann.owncloud.notes.android.activity.EditNoteActivity">
+    android:layout_height="match_parent">
 
-    <com.yydcdut.markdown.MarkdownEditText
-        android:id="@+id/editContent"
+    <ScrollView
+        android:id="@+id/scrollView"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:background="@null"
-        android:ems="10"
-        android:gravity="top"
-        android:inputType="textMultiLine|textCapSentences"
-        android:padding="16dp"
-        android:textColor="@color/fg_default" />
-</ScrollView>
+        android:layout_height="match_parent"
+        android:fillViewport="true"
+        android:orientation="vertical"
+        tools:context="it.niedermann.owncloud.notes.android.activity.EditNoteActivity">
+
+        <com.yydcdut.markdown.MarkdownEditText
+            android:id="@+id/editContent"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:background="@null"
+            android:ems="10"
+            android:gravity="top"
+            android:inputType="textMultiLine|textCapSentences"
+            android:padding="16dp"
+            android:textColor="@color/fg_default" />
+    </ScrollView>
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/searchPrev"
+        style="@style/fab"
+        android:layout_gravity="bottom|end"
+        android:translationY="-56dp"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_keyboard_arrow_up_white_24dp" />
+
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/searchNext"
+        style="@style/fab"
+        android:layout_gravity="bottom|end"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_keyboard_arrow_down_white_24dp" />
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
