#550 In-note-search doesn't jump to occurrence of searchstring
- Fix crash on pressing prev button too often
- Fix scrolling behavior in preview fragment

--- a/app/src/main/res/layout/fragment_note_preview.xml
+++ b/app/src/main/res/layout/fragment_note_preview.xml
@@ -1,17 +1,17 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.swiperefreshlayout.widget.SwipeRefreshLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.coordinatorlayout.widget.CoordinatorLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/swiperefreshlayout"
     android:layout_width="match_parent"
-    android:layout_height="match_parent"
-    android:background="@color/bg_normal"
-    tools:context="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
-    tools:ignore="MergeRootFrame">
+    android:layout_height="match_parent">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
+    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
+        android:id="@+id/swiperefreshlayout"
         android:layout_width="match_parent"
-        android:layout_height="match_parent">
+        android:layout_height="match_parent"
+        android:background="@color/bg_normal"
+        tools:context="it.niedermann.owncloud.notes.android.activity.NotesListViewActivity"
+        tools:ignore="MergeRootFrame">
 
         <ScrollView
             android:id="@+id/editContentContainer"
@@ -30,20 +30,20 @@
                 android:textColor="@color/fg_default"
                 android:textIsSelectable="true" />
         </ScrollView>
+    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/searchPrev"
-            style="@style/fab"
-            android:layout_gravity="bottom|end"
-            android:translationY="-56dp"
-            app:fabSize="mini"
-            app:srcCompat="@drawable/ic_keyboard_arrow_up_white_24dp" />
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/searchPrev"
+        style="@style/fab"
+        android:layout_gravity="bottom|end"
+        android:translationY="-56dp"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_keyboard_arrow_up_white_24dp" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/searchNext"
-            style="@style/fab"
-            android:layout_gravity="bottom|end"
-            app:fabSize="mini"
-            app:srcCompat="@drawable/ic_keyboard_arrow_down_white_24dp" />
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-</androidx.swiperefreshlayout.widget.SwipeRefreshLayout>
+    <com.google.android.material.floatingactionbutton.FloatingActionButton
+        android:id="@+id/searchNext"
+        style="@style/fab"
+        android:layout_gravity="bottom|end"
+        app:fabSize="mini"
+        app:srcCompat="@drawable/ic_keyboard_arrow_down_white_24dp" />
+</androidx.coordinatorlayout.widget.CoordinatorLayout>
