--- a/app/src/main/res/layout/fragment_note_edit.xml
+++ b/app/src/main/res/layout/fragment_note_edit.xml
@@ -30,13 +30,17 @@
         style="@style/fab"
         android:layout_gravity="bottom|end"
         android:translationY="-56dp"
+        android:visibility="gone"
         app:fabSize="mini"
-        app:srcCompat="@drawable/ic_keyboard_arrow_up_white_24dp" />
+        app:srcCompat="@drawable/ic_keyboard_arrow_up_white_24dp"
+        tools:visibility="visible" />
 
     <com.google.android.material.floatingactionbutton.FloatingActionButton
         android:id="@+id/searchNext"
         style="@style/fab"
         android:layout_gravity="bottom|end"
+        android:visibility="gone"
         app:fabSize="mini"
-        app:srcCompat="@drawable/ic_keyboard_arrow_down_white_24dp" />
+        app:srcCompat="@drawable/ic_keyboard_arrow_down_white_24dp"
+        tools:visibility="visible" />
 </androidx.coordinatorlayout.widget.CoordinatorLayout>
